--- a/SampleTracking/Views/Home/Create.cshtml
+++ b/SampleTracking/Views/Home/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SampleTracking.Models.User
+﻿@model SampleTracking.Models.Sample
 
 @{
     ViewData["Title"] = "Новый пользователь";
@@ -12,8 +12,8 @@
             <input type="text" asp-for="Name" class="form-control form-control-sm" />
         </div>
         <div class="form-group">
-            <label asp-for="Age"></label>
-            <input asp-for="Age" class="form-control  form-control-sm" />
+            <label asp-for="No_"></label>
+            <input asp-for="No_" class="form-control form-control-sm" />
         </div>
         <div class="form-group">
             <input type="submit" value="Сохранить" class="btn btn-outline-secondary" />
