--- a/SampleTracking/Views/Sample/Create.cshtml
+++ b/SampleTracking/Views/Sample/Create.cshtml
@@ -5,7 +5,7 @@
 }
 <h2>@ViewData["Title"]</h2>
 
-<form asp-action="Create" asp-controller="Home">
+<form asp-action="Create" asp-controller="Sample">
     <div>
         <div class="form-group">
             <label asp-for="Name"></label>
