--- a/SampleTracking/Views/Sample/Index.cshtml
+++ b/SampleTracking/Views/Sample/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <h2>@ViewData["Title"]</h2>
 <p>
-    <a asp-controller="Home" asp-action="Create">Добавить</a>
+    <a asp-controller="Sample" asp-action="Create">Добавить</a>
 </p>
 <table class="table">
     <tr>
