--- a/SampleTracking/Views/Sample/ShowCreate.cshtml
+++ b/SampleTracking/Views/Sample/ShowCreate.cshtml
@@ -5,7 +5,7 @@
 }
 <h2>@ViewData["Title"]</h2>
 
-<form asp-action="Create" asp-controller="Sample">
+<form method="post" action="/samples">
     <div>
         <div class="form-group">
             <label asp-for="Name"></label>
