--- a/SampleTracking/Views/Sample/Index.cshtml
+++ b/SampleTracking/Views/Sample/Index.cshtml
@@ -17,7 +17,7 @@
     {
         <tr>
             <td>@item.Name</td>
-            <td>@item.No_</td>
+            <td>@item.Code</td>
         </tr>
     }
 </table>
