--- a/SampleTracking/Views/Sample/ShowCreate.cshtml
+++ b/SampleTracking/Views/Sample/ShowCreate.cshtml
@@ -12,8 +12,8 @@
             <input type="text" asp-for="Name" class="form-control form-control-sm" />
         </div>
         <div class="form-group">
-            <label asp-for="No_"></label>
-            <input asp-for="No_" class="form-control form-control-sm" />
+            <label asp-for="Code"></label>
+            <input asp-for="Code" class="form-control form-control-sm" />
         </div>
         <div class="form-group">
             <input type="submit" value="Сохранить" class="btn btn-outline-secondary" />
