--- a/SampleTracking/Views/Sample/Index.cshtml
+++ b/SampleTracking/Views/Sample/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SampleTracking.Models.Sample>
+﻿@model IEnumerable<SampleTracking.Models.SampleVM>
 @{
     ViewData["Title"] = "Список пользователей";
 }
